也许是第一个在win64上实现FastJNI的项目（
SSO增加账号冻结功能
修复FPM端口占用问题
改进DPIProxy
修复ASM属性序列化bug
修复Nixim不能替换为抽象方法的问题,以及REPLACE模式没有修改方法名称,以及PCD的flag占用了低16位导致与modifier冲突
MethodNode的toString现在可以展示参数注解
修复JCompiler包名问题
修复McDiff压缩报错和解压太耗内存的问题
ChunkTrim删除了超时警告

更新Lavac

Native:
    修改部分函数名称
    拆分了library.cpp，模块化，并且依然没有链接
    FastJNI:
        增加基于AES-NI的AES加速
        增加XXHash32加速
    优化DLL大小